Fix open/close bar on mobile screens

--- a/website/static/css/header.css
+++ b/website/static/css/header.css
@@ -120,6 +120,6 @@
         width: 80%;
     }
     #openbar, #closedbar {
-        margin-top: 73px;
+        margin-top: 10vh;
     }
 }
